Add API key auth, rate limiting, and security headers
Introduces API key authentication, per-client rate limiting, CORS origin restrictions, and security headers to enhance production security. Updates .env.example, docker-compose.yml, and config to support new environment variables. API endpoints now validate API keys and enforce rate limits. Middleware stack updated for security headers and authentication. README expanded with security, configuration, and usage documentation.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,16 @@ MAX_FACES=1
 # Embedding settings (face_recognition uses 128-dim by default)
 EMBEDDING_DIM=128
 SIMILARITY_THRESHOLD=0.95
+
+# Security settings
+
+# API keys - comma-separated list of valid keys (empty = no auth, development mode)
+# Generate secure keys using: python -c "import secrets; print(secrets.token_urlsafe(32))"
+API_KEYS=
+
+# CORS origins - comma-separated list of allowed origins (empty = allow all, development mode)
+# Example: https://example.com,https://app.example.com
+ALLOWED_ORIGINS=
+
+# Rate limiting - requests per minute per API key or IP address
+RATE_LIMIT_PER_MINUTE=60
